Issue #12990 - Introduce static-deploy module